Updated Validator index

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -24,21 +24,10 @@ website:
       - text: Home
         href: index.qmd
       
-      - text: Deck
-        href: pitch/index.qmd
-      
-      - text: Tokenomics
-        menu:
+      - text: Market Makers
+        menu: 
           - text: Overview
-            href: economics/index.qmd
-          - text: Economic Model
-            href: economics/model.qmd
-          - text: Token Distribution
-            href: economics/distribution.qmd
-          - text: Market Dynamics
-            href: economics/market.qmd
-          - text: Validator Economics
-            href: economics/validators.qmd
+            href: market-makers/index.qmd
       
       - text: Technical Design
         menu:
@@ -52,6 +41,21 @@ website:
             href: technical/devnet.qmd
           - text: Validator Requirements
             href: technical/validators.qmd
+      
+      - text: Tokenomics
+        menu:
+          - text: Overview
+            href: economics/index.qmd
+          - text: Economic Model
+            href: economics/model.qmd
+          - text: Token Distribution
+            href: economics/distribution.qmd
+          - text: Market Dynamics
+            href: economics/market.qmd
+          - text: Validator Economics
+            href: economics/validators.qmd
+          - text: Deck
+            href: pitch/index.qmd
         
       - text: Blog
         href: blog/index.qmd
