--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -28,6 +28,8 @@ website:
         menu: 
           - text: Overview
             href: market-makers/index.qmd
+          - text: Competitors
+            href: market-makers/competitors.qmd
       
       - text: Technical Design
         menu:
